--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -15,7 +15,10 @@ jobs:
   enforce_pr_branch:
     runs-on: ubuntu-latest
     steps:
-      - name: Check Branches
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Check branches for valid prefixes
         id: check_branches
         run: |
           git for-each-ref --format='%(refname:short)' refs/heads/* | grep -v 'master\|dev\|prod' | while read -r branch; do
